Archive2/89/61fa32d7a27f18/output
main.cpp: In function 'int main()':
main.cpp:21:17: error: 'std::vector<int> Person::pList' is private
     vector<int> pList;
                 ^
main.cpp:197:18: error: within this context
     for_each( p->pList.begin(), p->pList.end(),[ ](int x)
                  ^
main.cpp:21:17: error: 'std::vector<int> Person::pList' is private
     vector<int> pList;
                 ^
main.cpp:197:36: error: within this context
     for_each( p->pList.begin(), p->pList.end(),[ ](int x)
                                    ^
